--- a/om-meg.html
+++ b/om-meg.html
@@ -14,7 +14,7 @@
         <a href="index.html"><button class="btn btn1"><p>eksempel</p></button></a>
     </div>
     <div class="innhold-hjem">
-        <h1>HJEM</h1>
+        <h1>OM MEG</h1>
         <p>Under konstruksjon</p>
     </div>
     
