--- a/prosjekter.html
+++ b/prosjekter.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
-        <a href="prosjekter.html"><button class="btn btn1"><p>Prosjekter</p></button></a>
-        <a href="om-meg.html"><button class="btn btn1"><p>Om meg</p></button></a>
-        <a href="index.html"><button class="btn btn1"><p>eksempel</p></button></a>
+        <div class="left-navbar">
+            <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
+        </div>
+        <div class="navbar-knapper">
+            <a href="prosjekter.html"><button class="btn btn1"><p>Prosjekter</p></button></a>
+            <a href="om-meg.html"><button class="btn btn1"><p>Om meg</p></button></a>
+            <a href="index.html"><button class="btn btn1"><p>eksempel</p></button></a>
+        </div>
     </div>
     <div class="innhold-hjem">
         <h1>PROSJEKTER</h1>
