--- a/index.html
+++ b/index.html
@@ -12,16 +12,29 @@
         <div class="left-navbar">
             <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
         </div>
+        <div class="off-screen-menu">
+            <ul>
+                <a href="prosjekter.html">Prosjekter</a>
+                <a href="om-meg.html">Om meg</a>
+                <a href="index.html">eksempel</a>
+
+            </ul>
+        </div>
+        <div class="ham-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="navbar-knapper">
-            <a href="prosjekter.html"><button class="btn btn1"><p>Prosjekter</p></button></a>
-            <a href="om-meg.html"><button class="btn btn1"><p>Om meg</p></button></a>
-            <a href="index.html"><button class="btn btn1"><p>eksempel</p></button></a>
+            <a href="prosjekter.html"><button class="btn btn1">Prosjekter</button></a>
+            <a href="om-meg.html"><button class="btn btn1">Om meg</button></a>
+            <a href="index.html"><button class="btn btn1">eksempel</button></a>
         </div>
     </div>
     <div class="innhold-hjem">
         <h1>HJEM</h1>
         <p>Under konstruksjon</p>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
