--- a/prosjekter.html
+++ b/prosjekter.html
@@ -8,29 +8,31 @@
     <title>Prosjekter</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="left-navbar">
-            <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
+    <nav>   
+        <div class="navbar">
+            <div class="left-navbar">
+                <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
+            </div>
+            <div class="off-screen-menu">
+                <ul>
+                    <a href="prosjekter.html">Prosjekter</a>
+                    <a href="om-meg.html">Om meg</a>
+                    <a href="kontakt.html">Kontakt</a>
+    
+                </ul>
+            </div>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="navbar-knapper">
+                <a href="prosjekter.html"><button class="btn btn1">Prosjekter</button></a>
+                <a href="om-meg.html"><button class="btn btn1">Om meg</button></a>
+                <a href="kontakt.html"><button class="btn btn1">Kontakt</button></a>
+            </div>
         </div>
-        <div class="off-screen-menu">
-            <ul>
-                <a href="prosjekter.html">Prosjekter</a>
-                <a href="om-meg.html">Om meg</a>
-                <a href="index.html">eksempel</a>
-
-            </ul>
-        </div>
-        <div class="ham-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <div class="navbar-knapper">
-            <a href="prosjekter.html"><button class="btn btn1"><p>Prosjekter</p></button></a>
-            <a href="om-meg.html"><button class="btn btn1"><p>Om meg</p></button></a>
-            <a href="index.html"><button class="btn btn1"><p>eksempel</p></button></a>
-        </div>
-    </div>
+    </nav>
     <div class="innhold-hjem">
         <h1>PROSJEKTER</h1>
         <p>Under konstruksjon</p>
