--- a/index.html
+++ b/index.html
@@ -8,32 +8,76 @@
     <title>Ib Strømsvåg</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="left-navbar">
-            <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
+    <nav>   
+        <div class="navbar">
+            <div class="left-navbar">
+                <a href="index.html"><img src="ib-logo-hvit.png" id="logo-navbar"></a>
+            </div>
+            <div class="off-screen-menu">
+                <ul>
+                    <a href="prosjekter.html">Prosjekter</a>
+                    <a href="om-meg.html">Om meg</a>
+                    <a href="kontakt.html">Kontakt</a>
+    
+                </ul>
+            </div>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="navbar-knapper">
+                <a href="prosjekter.html"><button class="btn btn1">Prosjekter</button></a>
+                <a href="om-meg.html"><button class="btn btn1">Om meg</button></a>
+                <a href="kontakt.html"><button class="btn btn1">Kontakt</button></a>
+            </div>
         </div>
-        <div class="off-screen-menu">
-            <ul>
-                <a href="prosjekter.html">Prosjekter</a>
-                <a href="om-meg.html">Om meg</a>
-                <a href="index.html">eksempel</a>
-
-            </ul>
-        </div>
-        <div class="ham-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <div class="navbar-knapper">
-            <a href="prosjekter.html"><button class="btn btn1">Prosjekter</button></a>
-            <a href="om-meg.html"><button class="btn btn1">Om meg</button></a>
-            <a href="index.html"><button class="btn btn1">eksempel</button></a>
-        </div>
-    </div>
+    </nav>
     <div class="innhold-hjem">
         <h1>HJEM</h1>
         <p>Under konstruksjon</p>
+    </div>
+    <div class="video">
+        <video id="video1" autoplay loop muted src="video-nettsidev.mp4"></video>
+    </div>
+    <div class="hjem-innhold">
+        <div class="box1">
+            <h1>Eksempel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
+                Delectus vero nam perferendis maxime quasi doloribus<br> 
+                quos deserunt iste nulla numquam ducimus laudantium ad <br>
+                asperiores magnam, non, laboriosam optio excepturi ipsum.<br> 
+                Et in consequuntur asperiores eos nihil soluta sunt vero <br>
+                itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
+        </div>
+        <div class="box2">
+            <h1>Eksempel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
+                Delectus vero nam perferendis maxime quasi doloribus<br> 
+                quos deserunt iste nulla numquam ducimus laudantium ad <br>
+                asperiores magnam, non, laboriosam optio excepturi ipsum.<br> 
+                Et in consequuntur asperiores eos nihil soluta sunt vero <br>
+                itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
+        </div>
+        <div class="box3">
+            <h1>Eksempel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
+                Delectus vero nam perferendis maxime quasi doloribus<br> 
+                quos deserunt iste nulla numquam ducimus laudantium ad <br>
+                asperiores magnam, non, laboriosam optio excepturi ipsum.<br> 
+                Et in consequuntur asperiores eos nihil soluta sunt vero <br>
+                itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
+        </div>
+        <div class="box4">
+            <h1>Eksempel</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
+                Delectus vero nam perferendis maxime quasi doloribus<br> 
+                quos deserunt iste nulla numquam ducimus laudantium ad <br>
+                asperiores magnam, non, laboriosam optio excepturi ipsum.<br> 
+                Et in consequuntur asperiores eos nihil soluta sunt vero <br>
+                itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
+        </div>
+
     </div>
     <script src="script.js"></script>
 </body>
