--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <video id="video1" autoplay loop muted src="video-nettsidev.mp4"></video>
     </div>
     <div class="hjem-innhold">
-        <div class="box1">
+        <div class="box box1">
             <h1>Eksempel</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                 Delectus vero nam perferendis maxime quasi doloribus<br> 
@@ -50,7 +50,7 @@
                 Et in consequuntur asperiores eos nihil soluta sunt vero <br>
                 itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
         </div>
-        <div class="box2">
+        <div class="box box2">
             <h1>Eksempel</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                 Delectus vero nam perferendis maxime quasi doloribus<br> 
@@ -59,7 +59,7 @@
                 Et in consequuntur asperiores eos nihil soluta sunt vero <br>
                 itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
         </div>
-        <div class="box3">
+        <div class="box box3">
             <h1>Eksempel</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                 Delectus vero nam perferendis maxime quasi doloribus<br> 
@@ -68,7 +68,7 @@
                 Et in consequuntur asperiores eos nihil soluta sunt vero <br>
                 itaque temporibus non nobis sequi, labore porro, voluptatibus</p>
         </div>
-        <div class="box4">
+        <div class="box box4">
             <h1>Eksempel</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                 Delectus vero nam perferendis maxime quasi doloribus<br> 
