--- a/om-meg.html
+++ b/om-meg.html
@@ -36,6 +36,9 @@
         <h1>OM MEG</h1>
         <p>Under konstruksjon</p>
     </div>
+
+    <div class="down-arrow"></div>
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/intersection-observer@0.12.2/intersection-observer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
