--- a/kontakt.html
+++ b/kontakt.html
@@ -40,6 +40,40 @@
     
     <div class="down-arrow"></div>
 
+    <div class="footer"></div>
+        <div class="footer1">
+            <img src="ib-logo-hvit.png">
+        </div>
+        <div class="footer2">
+            <p>Forfatter: Ib Strømsvåg</p>
+            <p><a href="mailto:ibjulian9@gmail.com">ibjulian9@gmail.com</a></p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+        </div>
+        <div class="footer3">
+            <p>Forfatter: Ib Strømsvåg</p>
+            <p><a href="mailto:ibjulian9@gmail.com">ibjulian9@gmail.com</a></p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+        </div>
+        <div class="footer4">
+            <p>Forfatter: Ib Strømsvåg</p>
+            <p><a href="mailto:ibjulian9@gmail.com">ibjulian9@gmail.com</a></p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+            <p>Eksempel</p>
+        </div>
+        <div class="footer5">
+            <img src="android-chrome-512x512.png">
+        </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/intersection-observer@0.12.2/intersection-observer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
