--- a/om-meg.html
+++ b/om-meg.html
@@ -7,6 +7,18 @@
     <title>Om meg</title>
 </head>
 <body>
+    <script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "naiad_52163utuCIhzYzo",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="naiad_52163utuCIhzYzo"
+    domain="www.chatbase.co"
+    defer>
+    </script>
     <nav>   
         <div class="navbar">
             <div class="left-navbar">
