--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Ib Strømsvåg</title>
 </head>
 <body>
+
+<script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "naiad_52163utuCIhzYzo",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="naiad_52163utuCIhzYzo"
+    domain="www.chatbase.co"
+    defer>
+    </script>
     <nav>   
         <div class="navbar">
             <div class="left-navbar">
